# Bee-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile
include/Bee/: Audio.hpp  BaseObject.hpp  Bee.hpp  Entity.hpp  Input.hpp  Log.hpp  Properties.hpp
include/Bee/Collision/: HitBox.hpp  Hitbox.hpp  Intersection.hpp
include/Bee/Graphics/: Animation.hpp  Color.hpp  HUDObject.hpp  Renderer.hpp  Window.hpp
include/Bee/Input/: Controller.hpp  ControllerButtons.hpp  Keyboard.hpp  Keys.hpp  Mouse.hpp  MouseButtons.hpp
include/Bee/Math/: FWD.hpp  Math.hpp  Matrix4f.hpp  Quaternion.hpp  Vector2f.hpp  Vector2i.hpp  Vector3f.hpp  Vector3i.hpp  Vector4f.hpp  Vector4i.hpp
include/Bee/World/: Tiles.hpp  World.hpp  WorldObject.hpp
include/bee/: Bee.hpp  Entity.hpp
include/bee/Collision/: HitBox.hpp  Intersection.hpp
include/bee/Graphics/: Renderer.hpp
include/bee/World/: Tiles.hpp  World.hpp  WorldObject.hpp
src/: Audio-Internal.hpp  Audio.cpp  Audio.hpp  BaseObject.cpp  Bee.cpp  Bee.hpp  Entity.cpp  Entity.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  Properties.cpp
src/Collision/: Collision.cpp  Collision.hpp  HitBox.hpp  Hitbox.hpp  Intersection.hpp
src/Graphics/: Animation.hpp  Color.cpp  HUDObject.cpp  HUDObject.hpp  Rect.hpp  Renderer-Internal.hpp  Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprite.hpp  Window-Internal.hpp  Window.cpp
src/Graphics/Renderer/: IRenderer.hpp
src/Graphics/Renderer/OpenGL/: BasicShader.hpp  ErrorHandling.cpp  ErrorHandling.hpp  IndexBuffer.cpp  IndexBuffer.hpp  OpenGL.cpp  OpenGL.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/Input/: Controller-Internal.hpp  Controller.cpp  Controller.hpp  ControllerButtons.hpp  Keyboard-Internal.hpp  Keyboard.cpp  Keyboard.hpp  Keys.hpp  Mouse-Internal.hpp  Mouse.cpp  Mouse.hpp
src/Math/: Math.cpp  Matrix4f.cpp  Vector2f.cpp  Vector2i.cpp  Vector2i.hpp  Vector3f.cpp  Vector3i.cpp  Vector4f.cpp  Vector4i.cpp
src/World/: Tiles.hpp  World.cpp  World.hpp  WorldObject.cpp  WorldObject.hpp
